# hurry

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  cabal.project  docker-compose.yml  hurry.cabal
.github/workflows/: docker.yml
cmd/hurry/: Main.hs
cmd/hurry-api/: Main.hs
cmd/hurry-cli/: Main.hs
docs/: TODO.md  notes.md
src/Hurry/: Cabal.hs  Client.hs  Lockfile.hs  Server.hs
src/Hurry/Client/: Cabal.hs  Cache.hs  Lockfile.hs
