cabal-version: 3.0
name:          hurry
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

  build-depends:
    , base    ==4.15.1.0
    , relude  ==1.1.0.0

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Hurry.Cabal
    Hurry.Lockfile

  build-depends:
    , cabal-plan       ==0.7.2.3
    , directory
    , safe-exceptions  ==0.1.7.3
    , aeson ==2.1.1.0

executable hurry
  import:         lang
  hs-source-dirs: cmd/hurry-cli
  main-is:        Main.hs
  ghc-options:    -threaded

  -- cabal-fmt: expand cmd/hurry-cli -Main
  other-modules:
  build-depends:
    , aeson                 ==2.1.1.0
    , cabal-plan            ==0.7.2.3
    , hurry
    , optparse-applicative  ==0.17.0.0
    , pretty-simple
    , with-utf8             ==1.0.2.3

executable hurry-api
  import:         lang
  hs-source-dirs: cmd/hurry-api
  main-is:        Main.hs
  ghc-options:    -threaded

  -- cabal-fmt: expand cmd/hurry-api -Main
  other-modules:
  build-depends:
    , aeson                 ==2.1.1.0
    , cabal-plan            ==0.7.2.3
    , hurry
    , optparse-applicative  ==0.17.0.0
    , pretty-simple
    , with-utf8             ==1.0.2.3
