cabal-version: 3.0
name:          hurry
version:       0.1.0.0

common lang
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

  build-depends:
    , base    ==4.15.1.0
    , relude  ==1.1.0.0

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Hurry.Cabal
    Hurry.Lockfile
    Hurry.Server

  build-depends:
    , aeson            ==2.1.1.0
    , cabal-plan       ==0.7.2.3
    , directory
    , filepath
    , mtl              ==2.2.2
    , pretty-simple
    , safe-exceptions  ==0.1.7.3
    , servant          ==0.19.1
    , servant-server   ==0.19.2

executable hurry
  import:         lang
  hs-source-dirs: cmd/hurry-cli
  main-is:        Main.hs
  ghc-options:    -threaded

  -- cabal-fmt: expand cmd/hurry-cli -Main
  other-modules:
  build-depends:
    , aeson                 ==2.1.1.0
    , aeson-pretty          ==0.8.9
    , cabal-plan            ==0.7.2.3
    , directory
    , filepath
    , hurry
    , optparse-applicative  ==0.17.0.0
    , req                   ==3.13.0
    , safe-exceptions       ==0.1.7.3
    , tar                   ==0.5.1.1
    , temporary             ==1.3
    , with-utf8             ==1.0.2.3
    , zip-archive           ==0.4.2.2
    , zstd                  ==0.1.3.0

executable hurry-api
  import:         lang
  hs-source-dirs: cmd/hurry-api
  main-is:        Main.hs
  ghc-options:    -threaded

  -- cabal-fmt: expand cmd/hurry-api -Main
  other-modules:
  build-depends:
    , aeson                 ==2.1.1.0
    , cabal-plan            ==0.7.2.3
    , hurry
    , optparse-applicative  ==0.17.0.0
    , wai                   ==3.2.3
    , wai-logger            ==2.4.0
    , warp                  ==3.3.23
    , with-utf8             ==1.0.2.3
