cabal-version: 3.0
name:          hurry
version:       0.1.0.0

common aeson
  build-depends: aeson ==2.1.1.0

common aeson-pretty
  build-depends: aeson-pretty ==0.8.9

common algebraic-graphs
  build-depends: algebraic-graphs ==0.7

common cabal-plan
  build-depends: cabal-plan ==0.7.2.3

common directory
  build-depends: directory ==1.3.6.2

common filepath
  build-depends: filepath ==1.4.2.1

common modern-uri
  build-depends: modern-uri ==0.3.6.0

common mtl
  build-depends: mtl ==2.2.2

common optparse-applicative
  build-depends: optparse-applicative ==0.17.0.0

common pretty-simple
  build-depends: pretty-simple ==4.1.2.0

common safe-exceptions
  build-depends: safe-exceptions ==0.1.7.3

common servant
  build-depends: servant ==0.19.1

common servant-server
  build-depends: servant-server ==0.19.2

common wai
  build-depends: wai ==3.2.3

common wai-logger
  build-depends: wai-logger ==2.4.0

common warp
  build-depends: warp ==3.3.23

common with-utf8
  build-depends: with-utf8 ==1.0.2.3

common wreq
  build-depends: wreq ==0.5.4.0

common zip-archive
  build-depends: zip-archive ==0.4.2.2

common zstd
  build-depends: zstd ==0.1.3.0

common base
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

  build-depends:
    , base    ==4.15.1.0
    , relude  ==1.2.0.0

common base-exe
  import:        base
  ghc-options:   -threaded
  build-depends: hurry

library
  import:
    base
    , aeson
    , algebraic-graphs
    , cabal-plan
    , directory
    , filepath
    , modern-uri
    , mtl
    , safe-exceptions
    , servant
    , servant-server
    , wreq
    , zip-archive
    , zstd

  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Hurry.Client
    Hurry.Client.Cabal
    Hurry.Client.Cache
    Hurry.Client.Lockfile
    Hurry.Server

executable hurry
  import:
    base-exe
    , aeson
    , aeson-pretty
    , cabal-plan
    , directory
    , filepath
    , modern-uri
    , optparse-applicative
    , pretty-simple
    , safe-exceptions
    , with-utf8
    , wreq

  hs-source-dirs: cmd/hurry-cli
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/hurry-cli -Main
  other-modules:

executable hurry-api
  import:
    base-exe
    , aeson
    , cabal-plan
    , optparse-applicative
    , wai
    , wai-logger
    , warp
    , with-utf8

  hs-source-dirs: cmd/hurry-api
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/hurry-api -Main
  other-modules:
